--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,9 @@
-site_name: My Docs
+site_name: Unify Documentation
+site_url: https://unify-webapp.github.io/unify-docs/
 theme:
   name: material
+nav:
+  - Getting Started: /
+  - Tech stack: /techstack/
+  - Adding To The Docs: /addingtodocs/
+  
