--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,4 +2,8 @@ site_name: Unify Documentation
 site_url: https://unify-webapp.github.io/unify-docs/
 theme:
   name: material
+nav:
+  - Getting Started: /
+  - Tech stack: techstack/
+  - Adding To The Docs: addingtodocs/
   
