--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_url: https://unify-webapp.github.io/unify-docs/
 theme:
   name: material
 nav:
-  - Getting Started: /
+  - Getting Started: index/
   - Tech stack: techstack/
   - Adding To The Docs: addingtodocs/
   
