- Created a new page about the data fetching mechanism (still in progress).

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,5 +5,6 @@ theme:
 nav:
   - Getting Started: /unify-docs/
   - Tech stack: techstack/
+  - Data Fetching (Context Creaton): datafetching/
   - Adding To The Docs: addingtodocs/
   
