--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,5 +5,6 @@ theme:
 nav:
   - Getting Started: /unify-docs/
   - Tech stack: techstack/
-  - Adding To The Docs: addingtodocs/
-  
+  - UML and Architecture: architecture/
+  - Contribute to Docs: addingtodocs/
+
